tests/paczka2/big_fuzzy/46112968.err
Error in line 5: A12 A230 66,4
Error in line 10: A12 S780 76,1
Error in line 14: cf4jE A462 88,0
Error in line 13: A12 A12 80,8
Error in line 15: cf4jE S780 44,4
Error in line 12: Y15 A230 9,5
Error in line 24: CgG S780 45,1
Error in line 26: CgG A462 77,7
Error in line 19: cf4jE A462 89,3
Error in line 35: i6DuhSE S780 58,4
Error in line 38: i6DuhSE A462 38,0
Error in line 43: yRvWMZN9B8 A230 76,9
Error in line 47: A12 S780 36,0
Error in line 48: cf4jE A462 96,6
Error in line 53: A12 A462 57,1
Error in line 62: CgG A12 39,
Error in line 70: A12 A462 53,5
Error in line 59: Y15 A462 56,6
Error in line 73: yRvWMZN9B8 S780 64,3
Error in line 81: A12 A230 101,9
Error in line 78: grOG S780 56,1
Error in line 74: CgG A230 36,5
Error in line 105: grOG A12 129,4
Error in line 110: grOG A462 49,2
Error in line 111: grOG S780 56,4
Error in line 113: Y15 A462 47,1
Error in line 93: A12 A12 87,9
Error in line 117: CgG S780 57,2
Error in line 141: yRvWMZN9B8 A12 35,0
Error in line 142: yRvWMZN9B8 A230 12,7
Error in line 144: yRvWMZN9B8 S780 33,4
Error in line 155: i6DuhSE A12 44,4
Error in line 145: grOG A12 44,0
Error in line 161: i6DuhSE A230 63,6
Error in line 158: grOG A462 8,2
Error in line 183: A12 A230 96,1
Error in line 196: cf4jE A462 54,4
Error in line 188: A12 A12 52,6
Error in line 205: CgG A230 60,3
Error in line 200: yRvWMZN9B8 A462 52,1
Error in line 201: Y15 A230 83,9
Error in line 214: A12 S780 6,3
Error in line 209: yRvWMZN9B8 S780 90,8
Error in line 227: Y15 A462 0,88
Error in line 225: Y15 A462 0,2
Error in line 243: Y15 A12 93,02
Error in line 245: A12 A462 4,0
